# Merope

./: CMakeLists.txt  CPPLINT.cfg  Env_Merope.sh  Install.md  Licence.txt  Licence_FR.txt  Readme.md
modules/: CMakeLists.txt
modules/AlgoPacking/: CMakeLists.txt  Install.md  Pre-install.sh  Procedure_Install.sh  ReadMe.md  env_RSA.sh
modules/AlgoPacking/Interface_python/: CMakeLists.txt  Interface_AlgoPacking.cxx
modules/AlgoPacking/cmake/modules/: common-compiler-flags.cmake  compiler.cmake  gcc.cmake
modules/AlgoPacking/doc/: Python_manual.md
modules/AlgoPacking/include/: AlgoBool.hxx  AlgoNames.hxx  AlgoPacking.hxx  AlgoPacking.ixx  AlgoRSA.hxx  AlgoRSA.ixx  AlgoWP.hxx  AlgoWP.ixx  ArrayDimensions.hxx  ArrayDimensions.ixx  For_testing.hxx  Interface.hxx  Interface.ixx  MultiDArrayObject.hxx  MultiDArrayObject.ixx  Path.hxx  Path.ixx  RadiusGenerator.hxx  RadiusGenerator.ixx  RandomShooter.hxx  RandomShooter.ixx  SphereContainer.hxx  SphereContainer.ixx  SphereManipulator.hxx  SphereManipulator.ixx  Voxel.hxx  Voxel.ixx
modules/AlgoPacking/src/: AlgoBool.hxx  AlgoBool.ixx  AlgoNames.hxx  AlgoPacking.cxx  AlgoPacking.hxx  AlgoPacking.ixx  AlgoRSA.hxx  AlgoRSA.ixx  AlgoWP.hxx  AlgoWP.ixx  AmbiantSpace.hxx  Area.cxx  ArrayDimensions.hxx  ArrayDimensions.ixx  AuxiFunctions.hxx  AuxiFunctions.ixx  BasicGeometricOperations.cxx  CMakeLists.txt  DoxyFile  Ellipse.cxx  For_testing.hxx  GlobalShape.hxx  GlobalShape.ixx  Interface.hxx  Interface.ixx  Loops.hxx  Loops.ixx  Loops_2.ixx  Main_pour_test.cxx  MultiDArrayObject.cxx  MultiDArrayObject.hxx  MultiDArrayObject.ixx  Path.cxx  Path.hxx  Path.ixx  RadiusGenerator.hxx  RadiusGenerator.ixx  RandomShooter.hxx  RandomShooter.ixx  SOA.hxx  (+7 more)
modules/AlgoPacking/src/Geometry/: Area.hxx  Area.ixx  BasicGeometricOperations.hxx  BasicGeometricOperations.ixx  ConvexPolyhedron.hxx  ConvexPolyhedron.ixx  Cuboid.hxx  Cuboid.ixx  Cylinder.hxx  Cylinder.ixx  Ellipse.hxx  Ellipse.ixx  GeomConstants.hxx  GeomTools_1.hxx  GeomTools_1.ixx  GeomTypes.hxx  HalfSpace.hxx  HalfSpace.ixx  Point.hxx  Point.ixx  RenormPoint.hxx  Segment.hxx  Sphere.hxx  Sphere.ixx
modules/AlgoPacking/studies/performance_omp/: perf.py
modules/AlgoPacking/tests/: File_radius_phase.txt  algoRSA.py  algoRSA_phases.py  algoWP.py  inclusions.py  nonRegression.py  testPerf.py
modules/GenericMerope/: Errors_Messages.hxx  MeropeNamespace.hxx  StdHeaders.hxx
modules/GenericTools/: AuxiFunctions.hxx  AuxiFunctions.ixx  CPP_Functions.hxx  CPP_Functions.ixx  Loops.hxx  Loops.ixx  Loops_2.ixx  SOA.hxx  Variant_shared_ptr.hxx
modules/Geometry/include/: AmbiantSpace.hxx  Area.hxx  Area.ixx  AspRatio.hxx  AspRatio.ixx  AuxiConvexPolyhedron.hxx  AuxiConvexPolyhedron.ixx  BasicGeometricOperations.hxx  BasicGeometricOperations.ixx  ConvexPolyhedron.hxx  ConvexPolyhedron.ixx  Cuboid.hxx  Cuboid.ixx  Cylinder.hxx  Cylinder.ixx  Ellipse.hxx  Ellipse.ixx  GeomConstants.hxx  GeomTools.hxx  GeomTools.ixx  GeomTools_1.hxx  GeomTools_1.ixx  GeomTypes.hxx  GlobalShape.hxx  GlobalShape.ixx  HalfSpace.hxx  HalfSpace.ixx  Hyper.hxx  Point.hxx  Point.ixx  RenormPoint.hxx  Rotation.hxx  Segment.hxx  Sphere.hxx  Sphere.ixx  SpheroPolyhedron.hxx  SpheroPolyhedron.ixx  Trim.hxx  Trim.ixx  VolumeInCube.hxx  (+2 more)
modules/Optimization/: CMakeLists.txt
modules/Optimization/include/: Anderson.hxx  Anderson.ixx  BarzilaiBorwein.hxx  BarzilaiBorwein.ixx  Tests.hxx  Tests.ixx
modules/Optimization/src/: CMakeLists.txt  Main.cxx  Tests.cxx
modules/cmake/for_voropp/: voropp_1.cmake  voropp_2.cmake
modules/cmake/modules/: fftw3.cmake  gcc.cmake  mkl.cmake
modules/ctest_all/: CMakeLists.txt
modules/merope_core/: CMakeLists.txt
modules/merope_core/Interface_python/: CMakeLists.txt  Interf_function_pointer.hxx  Interface.cxx
modules/merope_core/include/: CMakeLists.txt  Doxydoc  MeropeNamespace.hxx  geneOrientations.hxx  localMFront.h
modules/merope_core/include/AlgoLaguerre/: MakeCentroidal.hxx  Optimize_LaguerreTess.hxx  Optimize_LaguerreTess.ixx
modules/merope_core/include/CellLinks/: GetIndicesPoints.hxx  GetIndicesPoints.ixx
modules/merope_core/include/FFTW3/: FFTField.hxx  FFTScalarField.hxx  FFTScalarField.ixx  NumericTypes.h
modules/merope_core/include/Field/: CartesianField.hxx  CartesianField.ixx  CovSum.hxx  GaussianField.hxx  GaussianField.ixx  RealScalarField.hxx
modules/merope_core/include/Geometry/: AspRatio.hxx  AspRatio.ixx  AuxiConvexPolyhedron.hxx  AuxiConvexPolyhedron.ixx  GeomTools.hxx  GeomTools.ixx  Hyper.hxx  Rotation.hxx  SpheroPolyhedron.hxx  SpheroPolyhedron.ixx  Trim.hxx  Trim.ixx
modules/merope_core/include/Grid/: AreCompatible.hxx  CartesianGrid.hxx  CartesianGrid.ixx  CompositeVoxelTypes.hxx  ConvertGrix.hxx  ConvertGrix.ixx  ConvexGrid.hxx  ConvexGrid.ixx  Geostat.hxx  Grid.hxx  Grid.ixx  GridManipulations.hxx  GridManipulations.ixx  GridTypes.hxx  GridTypesBase.hxx  GridTypesBase.ixx  Grid_VER.hxx  Grid_VER.ixx  InclusionAndVoxel.hxx  InclusionAndVoxel.ixx  ListPhaseFrac.hxx  ListPhaseFrac.ixx  ManipOn_GridTypeBases.hxx  PreGrid.hxx  PreGrid.ixx  VoxelRule.hxx  VtkHistogramm.hxx  VtkHistogramm.ixx
modules/merope_core/include/Mesh/: GeoObjects.hxx  GeoObjects.ixx  GmshWriter.hxx  GmshWriter.ixx  MeshStructure.hxx  MeshStructure.ixx  SameThings.hxx  SameThings.ixx  TestMesh.hxx
modules/merope_core/include/MesoStructure/: InsideTorus.hxx  RecurMesoStructure.hxx  Structure.hxx  (+4 more)
modules/merope_core/src/: CMakeLists.txt  CartesianGrid.cxx  CovSum.cxx  FFTField.cxx  FFTScalarField.cxx  GaussianField.cxx  GeoObjects.cxx  Geostat.cxx  GmshWriter.cxx  Grid.cxx  GridManipulations.cxx  Grid_VER.cxx  Homogenization.cxx  Hyper.cxx  MeshGenerator.cxx  MicroInclusion.cxx  OpenmpWrapper.cxx  Optimize_LaguerreTess.cxx  RecurStructure.cxx  Rotation.cxx  SameThings.cxx  SetNbOfThreads.cxx  SphereSeeds.cxx  TIFFRead.cxx  TestMesh.cxx  Tests.cxx  VTKRead.cxx  VTKStream.cxx  VolumeInCube.cxx  VoroInterface.cxx  VoroToMeshGraph.cxx  Z_Main_Laguerre_opti.cxx  Z_Main_pour_test.cxx  Z_Performance.cxx  Z_Performance_1.cxx  Z_Test_debug.cxx  Z_texture.cxx  geneOrientations.cxx
(+290 files in other folders)
